# hema-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml  run.sh
deploy/: README.md  deploy.sh  deployment.conf.template
src/: nd26_cli_conf.json  run_bot_plan.md  run_nd26_cli.sh
src/config/: __init__.py  agent_config.json  agent_config.py  setup_memory.md  tracing.py
src/discord_bot/: bot.py  discord_utils.py  instance_lock.py  msg_constants.py  plan.md  pre_bot.py  reset_discord_server.py  run_bot.py
src/hr_agent/: README.md  config.py  initial_plan.md  main.py  models.py  step1_download.py  step2_parse.py  step3_match.py  step4_dedup.py  step5_ratings.py  step6_upload.py  utils.py
src/hr_agent/ratings_parser/: ratings_parser_v0.py
src/in_tournament/: README.md  render_declaration.py  render_elim.py  render_pools.py  server_layout.py  setup.py
src/in_tournament/config/: __init__.py  in_config.py
src/in_tournament/msgs/: __init__.py
src/in_tournament/results_agent/: calc_pools.py  models.py  results_agent.py  sheet_io.py
src/in_tournament/run_setup_agent/: run_setup_agent.py  run_setup_memory.md
src/msgs/: __init__.py  utils.py
src/msgs/CS/: match_table_confirmed.md  match_table_legend.md  reg_complete.md  (+3 more)
src/payment_agent/: payment_agent.py
src/pool_alch_agent/: README.md  loader.py  models.py  pool_alch_agent.py  reader.py  renderer.py  solver.py  state.py  validator.py  writer.py
src/pre_tournament/: render_declaration.py
src/reg_agent/: README.md  main.py  models.py  reg_agent.py  step1_download.py  step2_parse.py  step3_match.py  step4_5_init.py  step4_dedup.py  step5_ratings.py  step6_upload.py  step7_payments.py  step_typst.py  utils.py
src/setup_agent/: setup_agent.py
(+168 files in other folders)
